--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ rvm:
   - 2.0.0
   - 2.1.0
 
-bundler_args: --without darwin
+bundler_args: --without darwin development
 
 notifications:
   email: false
